syntax = "proto3";

package api.display.v1;

import "third_party/google/api/annotations.proto";

option go_package = "github.com/iWorld-y/domain_radar/api/display/v1;v1";

service Display {
  rpc Register (RegisterReq) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }
  rpc Login (LoginReq) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
  rpc ListReports (ListReportsReq) returns (ListReportsReply) {
    option (google.api.http) = {
      get: "/v1/reports"
    };
  }
  rpc GetReport (GetReportReq) returns (GetReportReply) {
    option (google.api.http) = {
      get: "/v1/reports/{id}"
    };
  }
}

message RegisterReq {
  string username = 1;
  string password = 2;
}

message RegisterReply {
  bool success = 1;
  string message = 2;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
  string username = 2;
}

message ListReportsReq {
  int32 page = 1;
  int32 page_size = 2;
}

message ReportSummary {
  int32 id = 1;
  string date = 2;
  int32 domain_count = 3;
  int32 average_score = 4;
  string title = 5;
}

message ListReportsReply {
  repeated ReportSummary reports = 1;
  int32 total = 2;
}

message GetReportReq {
  int32 id = 1;
}

message DeepAnalysis {
  string macro_trends = 1;
  string opportunities = 2;
  string risks = 3;
  repeated string action_guides = 4;
}

message Article {
  string title = 1;
  string link = 2;
  string source = 3;
  string pub_date = 4;
}

message DomainReport {
  int32 id = 1;
  string domain_name = 2;
  string overview = 3;
  string trends = 4;
  int32 score = 5;
  repeated string key_events = 6;
  repeated Article articles = 7;
}

message GetReportReply {
  int32 id = 1;
  string date = 2;
  repeated DomainReport domains = 3;
  DeepAnalysis deep_analysis = 4;
}
